--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
 
         .advice-container {
-            background-color: #f5f5f5;
+            background-color: orange;
             padding: 10px 15px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
